Added objects, arrays, functions, bind, call, apply, closure

--- a/index.html
+++ b/index.html
@@ -4,16 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
 </head>
 <body>
-    <div id="root">
 
-    </div>
-
-
-
-    <script src="./app.js"></script>
-    <script src="./hoisting/hoisting.js"></script>
+    <script src="./objects/access.js"></script>
+    <!-- <script src="./closures/closure.js"></script> -->
+    <!-- <script src="./bind_call_apply/bind_call_apply.js"></script> -->
+    <!-- <script src="./functions/nested_function.js"></script> -->
+    <!-- <script src="./this/this.js"></script> -->
+    <!-- <script src="./arrays/loops.js"></scrip> -->
+    <!-- <script src="./arrays/loops.js"></script> -->
+    <!-- <script src="./arrays/methods.js"></script> -->
+    <!-- <script src="./arrays/array.js"></script> -->
+    <!-- <script src="./arrays/array_literals.js"></script> -->
+    <!-- <script src="./arrays/new_array.js"></script> -->
+    <!-- <script src="./objects/JSON.js"></script> -->
+    <!-- <script src="./objects/constructor.js"></script> -->
+    <!-- <script src="./objects/object_create.js"></script> -->
+    <!-- <script src="./objects/object_literal.js"></script> -->
+    <!-- <script src="./objects/new_object.js"></script> -->
+    <!-- <script src="./functions/IIFs.js"></script> -->
+    <!-- <script src="./functions/anonymous.js"></script> -->
+    <!-- <script src="./functions/regular.js"></script> -->
+    <!-- <script src="./dynamic_typing/dynamic_typing.js"></script> -->
+    <!-- <script src="./app.js"></script> -->
+    <!-- <script src="./hoisting/hoisting.js"></script> -->
 </body>
 </html>
