--- a/index.html
+++ b/index.html
@@ -8,27 +8,14 @@
 </head>
 <body>
 
-    <script src="./objects/access.js"></script>
-    <!-- <script src="./closures/closure.js"></script> -->
-    <!-- <script src="./bind_call_apply/bind_call_apply.js"></script> -->
-    <!-- <script src="./functions/nested_function.js"></script> -->
-    <!-- <script src="./this/this.js"></script> -->
-    <!-- <script src="./arrays/loops.js"></scrip> -->
-    <!-- <script src="./arrays/loops.js"></script> -->
-    <!-- <script src="./arrays/methods.js"></script> -->
-    <!-- <script src="./arrays/array.js"></script> -->
-    <!-- <script src="./arrays/array_literals.js"></script> -->
-    <!-- <script src="./arrays/new_array.js"></script> -->
-    <!-- <script src="./objects/JSON.js"></script> -->
-    <!-- <script src="./objects/constructor.js"></script> -->
-    <!-- <script src="./objects/object_create.js"></script> -->
-    <!-- <script src="./objects/object_literal.js"></script> -->
-    <!-- <script src="./objects/new_object.js"></script> -->
-    <!-- <script src="./functions/IIFs.js"></script> -->
-    <!-- <script src="./functions/anonymous.js"></script> -->
-    <!-- <script src="./functions/regular.js"></script> -->
-    <!-- <script src="./dynamic_typing/dynamic_typing.js"></script> -->
-    <!-- <script src="./app.js"></script> -->
-    <!-- <script src="./hoisting/hoisting.js"></script> -->
-</body>
+
+    <script src="./ES_6_basics/Inheritance.js"></script>
+    <!-- <script src="./testing/strict.js"></script>
+    <script src="./promises/asynchronous.js "></script> -->
+    <!-- <script src="./testing/test.js "></sc> -->
+    <!-- <script src="./design_patterns/Module.js"></script> -->
+    <!-- <script src="./design_patterns/Singleton.js"></script> -->
+    <!-- <script src="./error_handling/error.js"></script> -->
+    <!-- <script src="./object_oriented/polymorphism.js"></script> -->
+ </body>
 </html>
